--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CXX_FLAGS "-Wall -Werror")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 set(CMAKE_BUILD_TYPE Debug)
 
-set(sources src/main.cpp src/worldModel.cpp src/stateMachine.cpp src/trajectoryPlanner.cpp)
+set(sources src/main.cpp src/worldModel.cpp src/stateMachine.cpp src/trajectory.cpp src/trajectoryPlanner.cpp)
 
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
